# nonlocal_gwfluxes

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ruff-format.yml
ann_cnn_training/: batch.sh  dataloader_definition.py  function_training.py  inference.py  inference2.py  inference_ifs.py  model_definition.py  test.py  test_parsing.py  test_parsing2.py  train.toml  training.py
attention_unet/: batch.sh  dataloader_attention_unet.py  function_training.py  inference.py  inference_ifs.py  model_attention_unet.py  probabilistic_inference.py  training_attention_unet.py
era5_training/: README.md  batch_ann.sh  batch_unet.sh  comp-env.sh  compile-and-run.sh  get-model-and-data.sh  infer.f90  infer.py  inference.py  pt2ts.py  training.py  training_attention_unet.py
era5_training/to_be_deleted/: training_ann.py
ifs_transfer_learning/: ANN_inference.py  attn_inference.py  batch.sh  function_training.py  model_definition.py  training_ifs_transfer_learning.py
ifs_transfer_learning/to_be_removed/: dataloader_definition.py  files.py  function_training.py
quick_inference_script/: README.md  dataloader_definition.py  function_training.py  get-model-and-data.sh  infer.f90  infer.py  pt2ts.py  run.sh  two_sample_inference.py
utils/: .function_training.py.swp  dataloader_definition.py  function_training.py  model_definition.py
